# alesis-hi-hat-fix

./: Cargo.toml  README.md
src/: main.rs
