[package]
name = "alesis-hi-hat-fix"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/beebeeep/alesis-hi-hat-fix"
description = "Alesis Turbo Mesh hi-hat pedal fix"
license = "MIT"
keywords = ["midi"]

[dependencies]
anyhow = "1.0.102"
clap = "4.5.60"
env_logger = "0.11.9"
log = "0.4.29"
midir = "0.10.3"
